# python-worker-template

./: .gitignore  README.md  docker-compose.yaml  main.py  producer.py  pyproject.toml
src/consumers/: base.py  pulsar.py  rabbitmq.py  ray.py
src/entities/: sum_entity.py
src/errors/: error.py  generic_errors.py
src/results/: result.py
src/tasks/: __init__.py  sum.py  template_task.py
src/utilities/: constants.py  exception_handler.py  logger.py  parameters_extractor.py  serilalizer.py  settings.py  singleton.py  task_registrator.py
