[project]
name = "python-worker-template"
version = "0.1.0"
description = ""
requires-python = "==3.12.*"
readme = "README.md"

dependencies = [


    "pydantic-settings==2.6.1",
    "pydantic==2.9.2",
    "pika==1.3.2",
    "ray==2.40.0",
    "pulsar-client==3.5.0",

    # Code linting, formatting and static analysis
    "ruff==0.7.2",
    "mypy==1.13.0",

    # Docs
    "sphinx==8.1.3"
]


[tool.ruff]
line-length = 120
exclude = ["main.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

#[tool.uv.commands]
#serve = ["python", "main.py"]
#migrate = ["python", "script.py"]